--- a/html/proyecto_video_1.html
+++ b/html/proyecto_video_1.html
@@ -15,7 +15,7 @@
     <head>
         <div id="cab">
             <div class="contenedor">
-                <div class="logo">JAER</div>
+                <div class="logo">BALAM</div>
                 <div class="nav">
                     <a href="../index.html#Proyectos">Volver</a>
                 </div>
@@ -32,7 +32,7 @@
      <div id="cuer">
          <div class="video">
          <div class="info">
-             <div class="video_txt"><h2>Demo Reel Casa Productora Balam 2021</h2><p>Este es el Demo Reel de mi casa productora, donde muestro todos los proyectos audiovisuales que hemos hecho a lo largo de nuestra nuestra existencia. <br>Hice la edición completa del video.</p>
+             <div class="video_txt"><h2>Demo Reel Casa Productora Balam 2021</h2><p>Este es el Demo Reel de la casa productora, donde te mostramos todos los proyectos audiovisuales que hemos hecho a lo largo de nuestra nuestra existencia.</p>
              </div>
          </div>
             <iframe width="855" height="425" src="https://www.youtube.com/embed/eqGnhdmWhUg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
