--- a/html/proyecto_video_2.html
+++ b/html/proyecto_video_2.html
@@ -15,7 +15,7 @@
    <head>
         <div id="cab">
             <div class="contenedor">
-                <div class="logo">JAER</div>
+                <div class="logo">BALAM</div>
                 <div class="nav">
                     <a href="../index.html#Proyectos">Volver</a>
                 </div>
@@ -32,7 +32,7 @@
      <div id="cuer">
          <div class="video">
          <div class="info">
-             <div class="video_txt"><h2>Jaime</h2><p>En este proyeto me desempeñé como guionista, director, productor y postproductor. <br>Junto con la Casa Productora BALAM.</p>
+             <div class="video_txt"><h2>Jaime</h2><p>Este videoclip musical se hizo como proyecto escolar. <br>Videoclip hecho en totalidad por la productora Balam.</p>
              </div>
          </div>
              <iframe width="855px" height="425px" src="https://www.youtube.com/embed/wanB6eg-rBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
