--- a/html/proyecto_video_4.html
+++ b/html/proyecto_video_4.html
@@ -15,7 +15,7 @@
     <head>
         <div id="cab">
             <div class="contenedor">
-                <div class="logo">JAER</div>
+                <div class="logo">BALAM</div>
                 <div class="nav">
                     <a href="../index.html#Proyectos">Volver</a>
                 </div>
@@ -32,7 +32,7 @@
      <div id="cuer">
          <div class="video">
          <div class="info">
-             <div class="video_txt"><h2>Batalla mágica</h2><p>En este proyeto me desempeñé como guionista, director, camarógrafo, actor, productor y postproductor. <br>Junto con la Casa Productora BALAM.</p>
+             <div class="video_txt"><h2>Batalla mágica</h2><p>Este fue de los primeros trabajos de la productora, incursionamos en los efectos visuales por primera vez. <br>Idea original de la Casa Productora BALAM.</p>
              </div>
          </div>
              <iframe width="855" height="425" src="https://www.youtube.com/embed/OkQorwavE8w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
