--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <link rel="icon" type="img/png" href="img/icono.png">
     <link rel="stylesheet" href="Glider.js-master/glider.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/estilo1.css">
+    <script src="https://kit.fontawesome.com/af9debd5f8.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -97,6 +97,7 @@
                             <p><br> Juan Antonio Enriquez Rios <br></p>
                             <a href="http://www.instagram.com/jaer.antonio" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
                             <a href="https://www.behance.net/-JAER" target="blank"><i class="fa fa-fw fa-behance"></i></a>
+                            <a href="https://antonio-jaer.github.io/jaer_newbook" target="blank"><i class="fa fa-fw fa-github"></i></a>
                         </div>
                     </td>
                     <td>
@@ -112,7 +113,7 @@
                             <img src="img/users/armando.jpg" alt="">
                             <p><br> Armando Cruz López <br></p>
                             <a href="http://www.instagram.com/armandofyd" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            <a href="https://www.behance.net/-JAER" target="blank"><i class="fa fa-fw fa-behance"></i></a>
+                            <a href="https://armandoacl.github.io/Portafolio/index.html" target="blank"><i class="fa fa-fw fa-github"></i></a>
                         </div>
                     </td>
                 </tr>
@@ -122,7 +123,6 @@
                             <img src="img/users/karen.jpg" alt="">
                             <p><br> Ana Karen Enriquez Ventura <br></p>
                             <a href="http://www.instagram.com/karen.veka" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            <a href="https://www.behance.net/-JAER" target="blank"><i class="fa fa-fw fa-behance"></i></a>
                         </div>
                     </td>
                     <td>
