--- a/html/proyecto_video_3.html
+++ b/html/proyecto_video_3.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="icon" type="img/png" href="../img/icono.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/af9debd5f8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilo_videos.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
                     <a href="http://www.instagram.com/jaer.antonio" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
                     <a href="https://www.behance.net/-JAER" target="blank"><i class="fa fa-fw fa-behance"></i></a>
                     <a href="https://www.facebook.com/Antonio-JAER-Rios-1810447609052520/" target="blank"><i class="fa fa-fw fa-facebook"></i></a>
-                    <a href="https://www.facebook.com/Antonio-JAER-Rios-1810447609052520/" target="blank"><i class="fa fa-fw fa-vimeo"></i></a>
+                    <a href="https://www.youtube.com/channel/UCprbqzTwLZEzmTT8TBRu1mg" target="blank"><i class="fa fa-fw fa-youtube"></i></a>
                     </div>
             </div>
         </div>
