--- a/html/proyecto_video_3.html
+++ b/html/proyecto_video_3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabajo en equipo</title>
+    <title>El intercambio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -32,10 +32,13 @@
      <div id="cuer">
          <div class="video">
          <div class="info">
-             <div class="video_txt"><h2>Trabajo en equipo</h2><p>Video skecth sobre lo que conlleva el trabajar en equipos escolares. Este video fue un trabajo escolar. <br>Idea original de la Casa Productora BALAM.</p>
+             <div class="video_txt"><h2>El intercambio</h2><p>Serie Web escrita por As de Trebol y producidad por "BALAM" en coproducción con "Vocho Films" <br> 2021</p>
              </div>
          </div>
-            <iframe width="855" height="425" src="https://www.youtube.com/embed/eE0oNmDuQ88" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe width="855" height="425" src="https://www.youtube.com/embed/amTGQEprT_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
+         <iframe width="855" height="425" src="https://www.youtube.com/embed/jITKNRU6DjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe width="855" height="425" src="https://www.youtube.com/embed/gqHyb3Q1g9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <iframe width="855" height="425" src="https://www.youtube.com/embed/t6mGcySCHBM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
      </div>
     </main>
