--- a/index.html
+++ b/index.html
@@ -68,12 +68,16 @@
                             <a href="html/proyecto_video_2.html"><img src="img/cortos/2.png" alt=""></a>
                             <p>JAIME <br> Videoclip musical <br>2019 | Casa Productora BALAM</p>
                         </div>
-                        <div class="carousel__elemento">
+                         <div class="carousel__elemento">
                             <a href="html/proyecto_video_3.html"><img src="img/cortos/3.png" alt=""></a>
-                            <p>Trabajo en equipo <br> Cortometraje <br>2018 | Casa Productora BALAM</p>
+                            <p>El intercambio <br> Serie Web <br>2021 | Co Producción Casa Productora BALAM</p>
                         </div>
                         <div class="carousel__elemento">
                             <a href="html/proyecto_video_4.html"><img src="img/cortos/4.png" alt=""></a>
+                            <p>Trabajo en equipo <br> Cortometraje <br>2018 | Casa Productora BALAM</p>
+                        </div>
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_5.html"><img src="img/cortos/5.png" alt=""></a>
                             <p>Batalla Mágica <br> Cortometraje <br>2017 | Casa Productora BALAM</p>
                         </div>
                     </div>
@@ -113,6 +117,7 @@
                             <img src="img/users/armando.jpg" alt="">
                             <p><br> Armando Cruz López <br></p>
                             <a href="http://www.instagram.com/armandofyd" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
+                            <a href="https://www.behance.net/armandocruz4" target="blank"><i class="fa fa-fw fa-behance"></i></a>
                             <a href="https://armandoacl.github.io/Portafolio/index.html" target="blank"><i class="fa fa-fw fa-github"></i></a>
                         </div>
                     </td>
@@ -211,6 +216,7 @@
                         <a href="http://www.instagram.com/balam.prod" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
                         <a href="https://www.youtube.com/channel/UCprbqzTwLZEzmTT8TBRu1mg" target="blank"><i class="fa fa-fw fa-youtube"></i></a>
                     </div>
+                    
                 </div>
             </div>
     </main>
