--- a/index.html
+++ b/index.html
@@ -62,23 +62,23 @@
                     <div class="carousel__lista">
                         <div class="carousel__elemento">
                             <a href="html/proyecto_video_1.html"><img src="img/cortos/1.png" alt=""></a>
-                            <p>Reel Balam <br> Montaje <br> 2021 | Casa Productora BALAM</p>
+                            <p>Reel Balam <br> Montaje <br> 2021</p>
                         </div>
                         <div class="carousel__elemento">
                             <a href="html/proyecto_video_2.html"><img src="img/cortos/2.png" alt=""></a>
-                            <p>JAIME <br> Videoclip musical <br>2019 | Casa Productora BALAM</p>
+                            <p>JAIME <br> Videoclip musical <br>2019</p>
                         </div>
                          <div class="carousel__elemento">
                             <a href="html/proyecto_video_3.html"><img src="img/cortos/3.png" alt=""></a>
-                            <p>El intercambio <br> Serie Web <br>2021 | Co Producción Casa Productora BALAM</p>
+                            <p>El intercambio <br> Serie Web <br>2021</p>
                         </div>
                         <div class="carousel__elemento">
                             <a href="html/proyecto_video_4.html"><img src="img/cortos/4.png" alt=""></a>
-                            <p>Trabajo en equipo <br> Cortometraje <br>2018 | Casa Productora BALAM</p>
+                            <p>Trabajo en equipo <br> Cortometraje <br>2018 </p>
                         </div>
                         <div class="carousel__elemento">
                             <a href="html/proyecto_video_5.html"><img src="img/cortos/5.png" alt=""></a>
-                            <p>Batalla Mágica <br> Cortometraje <br>2017 | Casa Productora BALAM</p>
+                            <p>Batalla Mágica <br> Cortometraje <br>2017</p>
                         </div>
                     </div>
                     <button aria-label="Siguiente" class="carousel__siguiente"><i class="fa fa-fw fa-chevron-right"></i></button>
