--- a/html/proyecto_video_3.html
+++ b/html/proyecto_video_3.html
@@ -20,9 +20,7 @@
                     <a href="../index.html#Proyectos">Volver</a>
                 </div>
                 <div class="redes_nav">
-                    <a href="http://www.instagram.com/jaer.antonio" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                    <a href="https://www.behance.net/-JAER" target="blank"><i class="fa fa-fw fa-behance"></i></a>
-                    <a href="https://www.facebook.com/Antonio-JAER-Rios-1810447609052520/" target="blank"><i class="fa fa-fw fa-facebook"></i></a>
+                    <a href="http://www.instagram.com/balam.prod" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
                     <a href="https://www.youtube.com/channel/UCprbqzTwLZEzmTT8TBRu1mg" target="blank"><i class="fa fa-fw fa-youtube"></i></a>
                     </div>
             </div>
