--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,16 +67,36 @@
                             <a href="html/proyecto_video_2.html"><img src="img/cortos/2.png" alt=""></a>
                             <p>JAIME <br> Videoclip musical <br>2019</p>
                         </div>
-                         <div class="carousel__elemento">
+                        <div class="carousel__elemento">
                             <a href="html/proyecto_video_3.html"><img src="img/cortos/3.png" alt=""></a>
                             <p>El intercambio <br> Serie Web <br>2021</p>
                         </div>
                         <div class="carousel__elemento">
                             <a href="html/proyecto_video_4.html"><img src="img/cortos/4.png" alt=""></a>
-                            <p>Trabajo en equipo <br> Cortometraje <br>2018 </p>
+                            <p>Cineminuto <br> Cortometraje <br>2021 </p>
+                        </div>
+                          <div class="carousel__elemento">
+                            <a href="html/proyecto_video_9.html"><img src="img/cortos/9.png" alt=""></a>
+                            <p>METFLIX <br> Cortometraje <br>2018</p>
                         </div>
                         <div class="carousel__elemento">
                             <a href="html/proyecto_video_5.html"><img src="img/cortos/5.png" alt=""></a>
+                            <p>Trabajo en equipo <br> Cortometraje <br>2018 </p>
+                        </div>
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_7.html"><img src="img/cortos/7.jpg" alt=""></a>
+                            <p>Bálsamo <br> Comercial <br>2019</p>
+                        </div>
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_8.html"><img src="img/cortos/8.png" alt=""></a>
+                            <p>Jochología <br> Comercial <br>2019</p>
+                        </div>
+                          <div class="carousel__elemento">
+                            <a href="html/proyecto_video_10.html"><img src="img/cortos/10.png" alt=""></a>
+                            <p>La que me gusta <br> Videoclip musical <br>2019</p>
+                        </div>
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_6.html"><img src="img/cortos/6.png" alt=""></a>
                             <p>Batalla Mágica <br> Cortometraje <br>2017</p>
                         </div>
                     </div>
@@ -93,63 +112,63 @@
             </center>
             <br><br>
             <div class="table">
-            <table>
-                <tr>
-                    <td>
-                        <div class="integrante">
-                            <img src="img/users/antonio.jpg" alt="">
-                            <p><br> Juan Antonio Enriquez Rios <br></p>
-                            <a href="http://www.instagram.com/jaer.antonio" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            <a href="https://www.behance.net/-JAER" target="blank"><i class="fa fa-fw fa-behance"></i></a>
-                            <a href="https://antonio-jaer.github.io/jaer_newbook" target="blank"><i class="fa fa-fw fa-github"></i></a>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="integrante">
-                            <img src="img/users/fran.jpg" alt="">
-                            <p><br> Diana Clara Franchini Serrano <br></p>
-                            <a href="http://www.instagram.com/misquik._art" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            <a href="https://www.behance.net/dianafranchi" target="blank"><i class="fa fa-fw fa-behance"></i></a>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="integrante">
-                            <img src="img/users/armando.jpg" alt="">
-                            <p><br> Armando Cruz López <br></p>
-                            <a href="http://www.instagram.com/armandofyd" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            <a href="https://www.behance.net/armandocruz4" target="blank"><i class="fa fa-fw fa-behance"></i></a>
-                            <a href="https://armandoacl.github.io/Portafolio/index.html" target="blank"><i class="fa fa-fw fa-github"></i></a>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                         <div class="integrante">
-                            <img src="img/users/karen.jpg" alt="">
-                            <p><br> Ana Karen Enriquez Ventura <br></p>
-                            <a href="http://www.instagram.com/karen.veka" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                        </div>
-                    </td>
-                    <td>
-                         <div class="integrante">
-                            <img src="img/users/aldo.jpg" alt="">
-                            <p><br> Aldo Martínez Cortés <br></p>
-                            <a href="http://www.instagram.com/aldomc.art" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            <a href="https://www.behance.net/aldomc" target="blank"><i class="fa fa-fw fa-behance"></i></a>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="integrante">
-                            <img src="img/users/adri.jpg" alt="">
-                            <p><br> Adriana Reyes Vargas <br></p>
-                            <a href="http://www.instagram.com/adri_uwu" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            <a href="https://www.behance.net/adrianareyes7" target="blank"><i class="fa fa-fw fa-behance"></i></a>
-                        </div>
-                    </td>
-                </tr>
-            </table>
+                <table>
+                    <tr>
+                        <td>
+                            <div class="integrante">
+                                <img src="img/users/antonio.jpg" alt="">
+                                <p><br> Juan Antonio Enriquez Rios <br></p>
+                                <a href="http://www.instagram.com/jaer.antonio" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
+                                <a href="https://www.behance.net/-JAER" target="blank"><i class="fa fa-fw fa-behance"></i></a>
+                                <a href="https://antonio-jaer.github.io/jaer_newbook" target="blank"><i class="fa fa-fw fa-github"></i></a>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="integrante">
+                                <img src="img/users/fran.jpg" alt="">
+                                <p><br> Diana Clara Franchini Serrano <br></p>
+                                <a href="http://www.instagram.com/misquik._art" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
+                                <a href="https://www.behance.net/dianafranchi" target="blank"><i class="fa fa-fw fa-behance"></i></a>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="integrante">
+                                <img src="img/users/armando.jpg" alt="">
+                                <p><br> Armando Cruz López <br></p>
+                                <a href="http://www.instagram.com/armandofyd" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
+                                <a href="https://www.behance.net/armandocruz4" target="blank"><i class="fa fa-fw fa-behance"></i></a>
+                                <a href="https://armandoacl.github.io/Portafolio/index.html" target="blank"><i class="fa fa-fw fa-github"></i></a>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="integrante">
+                                <img src="img/users/karen.jpg" alt="">
+                                <p><br> Ana Karen Enriquez Ventura <br></p>
+                                <a href="http://www.instagram.com/karen.veka" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="integrante">
+                                <img src="img/users/aldo.jpg" alt="">
+                                <p><br> Aldo Martínez Cortés <br></p>
+                                <a href="http://www.instagram.com/aldomc.art" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
+                                <a href="https://www.behance.net/aldomc" target="blank"><i class="fa fa-fw fa-behance"></i></a>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="integrante">
+                                <img src="img/users/adri.jpg" alt="">
+                                <p><br> Adriana Reyes Vargas <br></p>
+                                <a href="http://www.instagram.com/adri_uwu" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
+                                <a href="https://www.behance.net/adrianareyes7" target="blank"><i class="fa fa-fw fa-behance"></i></a>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
             </div>
-           <!-- <div class="carousel">
+            <!-- <div class="carousel">
                 <center>
                     <h2>Integrantes</h2>
                 </center>
@@ -216,7 +235,6 @@
                         <a href="http://www.instagram.com/balam.prod" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
                         <a href="https://www.youtube.com/channel/UCprbqzTwLZEzmTT8TBRu1mg" target="blank"><i class="fa fa-fw fa-youtube"></i></a>
                     </div>
-                    
                 </div>
             </div>
     </main>
