--- a/html/proyecto_video_9.html
+++ b/html/proyecto_video_9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabajo en equipo</title>
+    <title>METFLIX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -30,17 +30,17 @@
      <div id="cuer">
          <div class="video">
          <div class="info">
-             <div class="video_txt"><h2>Trabajo en equipo</h2><p>Video skecth sobre lo que conlleva el trabajar en equipos escolares. Este video fue un trabajo escolar. <br>Idea original de la Casa Productora BALAM.</p>
+             <div class="video_txt"><h2>METFLIX</h2><p>Cortometraje parodia de Netflix. <br> Idea original de la Casa Productora BALAM.</p>
              </div>
          </div>
-            <iframe width="855" height="425" src="https://www.youtube.com/embed/eE0oNmDuQ88" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="855" height="425" src="https://www.youtube.com/embed/FXhVtrf7AV0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          </div>
      </div>
     </main>
     <footer>
         <div class="colon">
         <div><img src="../img/iconob.png" alt="icon"></div>
-        <h3>BALAM</h3>2022 | Todos los derechos reservados <br>Gracias por visitar nuestra página<br>Hecha con mucho ❤ <br>Diseño Web: Antonio JAER Rios</div>
+         <h3>BALAM</h3>2022 | Todos los derechos reservados <br>Gracias por visitar nuestra página<br>Hecha con mucho ❤ <br>Diseño Web: Antonio JAER Rios</div>
     </footer>
     
 </body>
