--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <a href="html/proyecto_video_4.html"><img src="img/cortos/4.png" alt=""></a>
                             <p>Cineminuto <br> Cortometraje <br>2021 </p>
                         </div>
-                          <div class="carousel__elemento">
+                        <div class="carousel__elemento">
                             <a href="html/proyecto_video_9.html"><img src="img/cortos/9.png" alt=""></a>
                             <p>METFLIX <br> Cortometraje <br>2018</p>
                         </div>
@@ -91,7 +91,7 @@
                             <a href="html/proyecto_video_8.html"><img src="img/cortos/8.png" alt=""></a>
                             <p>Jochología <br> Comercial <br>2019</p>
                         </div>
-                          <div class="carousel__elemento">
+                        <div class="carousel__elemento">
                             <a href="html/proyecto_video_10.html"><img src="img/cortos/10.png" alt=""></a>
                             <p>La que me gusta <br> Videoclip musical <br>2019</p>
                         </div>
@@ -216,9 +216,8 @@
                     <button aria-label="Siguiente" class="carousel__siguiente__inte"><i class="fa fa-fw fa-chevron-right"></i></button>
                 </div>
                 <br>
-                <div role="tablist" class="carousel__indicadores__inte"></div>
-                <a name="Contacto" class="ancla"></a>
-            </div> -->
+                <div role="tablist" class="carousel__indicadores__inte"></div> -->
+            <a name="Contacto" class="ancla"></a>
             <br><br><br>
             <div class="contacto">
                 <div id="foto">
