--- a/html/proyecto_video_4 .html
+++ b/html/proyecto_video_4 .html
@@ -5,43 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Escape?</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <link rel="icon" type="img/png" href="../img/icono.png">
     <script src="https://kit.fontawesome.com/af9debd5f8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/estilo_videos.css">
 </head>
+
 <body>
+
     <head>
         <div id="cab">
             <div class="contenedor">
                 <div class="logo">BALAM</div>
                 <div class="nav">
-                    <a href="../index.html#Proyectos">Volver</a>
+                    <a href="../index.html">Volver</a>
                 </div>
                 <div class="redes_nav">
                     <a href="http://www.instagram.com/balam.prod" target="blank"><i class="fa fa-fw fa-instagram"></i></a>
                     <a href="https://www.youtube.com/channel/UCprbqzTwLZEzmTT8TBRu1mg" target="blank"><i class="fa fa-fw fa-youtube"></i></a>
-                    </div>
+                </div>
             </div>
         </div>
     </head>
     <main>
-     <div id="cuer">
-         <div class="video">
-         <div class="info">
-             <div class="video_txt"><h2>¿Escape?</h2><p>Cortometraje de suspenso para el primer concurso de Video Vertical.<br>Idea original de la Casa Productora BALAM.</p>
-             </div>
-         </div>
-            <iframe width="855" height="425" src="https://www.youtube.com/embed/3_8hyFwOMk0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-         </div>
-     </div>
+        <div id="cuer">
+            <div class="video">
+                <div class="info">
+                    <div class="video_txt">
+                        <h2>¿Escape?</h2>
+                        <p>Cortometraje de suspenso para el primer concurso de Video Vertical.<br>Idea original de la Casa Productora BALAM.</p>
+                    </div>
+                </div>
+                <iframe width="855" height="425" src="https://www.youtube.com/embed/3_8hyFwOMk0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="colon">
-        <div><img src="../img/iconob.png" alt="icon"></div>
-        <h3>BALAM</h3>2022 | Todos los derechos reservados <br>Gracias por visitar nuestra página<br>Hecha con mucho ❤ <br>Diseño Web: Antonio JAER Rios</div>
+            <div><img src="../img/iconob.png" alt="icon"></div>
+            <h3>BALAM</h3>2022 | Todos los derechos reservados <br>Gracias por visitar nuestra página<br>Hecha con mucho ❤ <br>Diseño Web: Antonio JAER Rios
+        </div>
     </footer>
-    
-</body>
-</html>
+
+</body></html>
