--- a/index.html
+++ b/index.html
@@ -54,57 +54,84 @@
             <br><br><br><br><br><br>
             <div class="carousel">
                 <center>
-                    <h2>Videos</h2><br>
+                    <h2>AUDIOVISUALES</h2><br>
                 </center>
-                <div class="carousel__contenedor">
-                    <button aria-label="Anterior" class="carousel__anterior"><i class="fa fa-fw fa-chevron-left"></i></button>
-                    <div class="carousel__lista">
+                <div class="carousel__contenedor__auvi">
+                    <button aria-label="Anterior" class="carousel__anterior__auvi"><i class="fa fa-fw fa-chevron-left"></i></button>
+                    <div class="carousel__lista__auvi">
                         <div class="carousel__elemento">
-                            <a href="html/proyecto_video_1.html"><img src="img/cortos/1.png" alt=""></a>
+                            <a href="html/proyecto_video_reel.html"><img src="img/cortos/1.png" alt=""></a>
                             <p>Reel Balam <br> Montaje <br> 2021</p>
                         </div>
                         <div class="carousel__elemento">
-                            <a href="html/proyecto_video_2.html"><img src="img/cortos/2.png" alt=""></a>
-                            <p>JAIME <br> Videoclip musical <br>2019</p>
-                        </div>
-                        <div class="carousel__elemento">
-                            <a href="html/proyecto_video_3.html"><img src="img/cortos/3.png" alt=""></a>
-                            <p>El intercambio <br> Serie Web <br>2021</p>
-                        </div>
-                        <div class="carousel__elemento">
-                            <a href="html/proyecto_video_4.html"><img src="img/cortos/4.png" alt=""></a>
-                            <p>Cineminuto <br> Cortometraje <br>2021 </p>
-                        </div>
-                        <div class="carousel__elemento">
-                            <a href="html/proyecto_video_9.html"><img src="img/cortos/9.png" alt=""></a>
-                            <p>METFLIX <br> Cortometraje <br>2018</p>
-                        </div>
-                        <div class="carousel__elemento">
-                            <a href="html/proyecto_video_5.html"><img src="img/cortos/5.png" alt=""></a>
-                            <p>Trabajo en equipo <br> Cortometraje <br>2018 </p>
-                        </div>
-                        <div class="carousel__elemento">
-                            <a href="html/proyecto_video_7.html"><img src="img/cortos/7.jpg" alt=""></a>
+                            <a href="html/proyecto_video_balsamo.html"><img src="img/cortos/7.jpg" alt=""></a>
                             <p>Bálsamo <br> Comercial <br>2019</p>
                         </div>
                         <div class="carousel__elemento">
-                            <a href="html/proyecto_video_8.html"><img src="img/cortos/8.png" alt=""></a>
+                            <a href="html/proyecto_video_jocho.html"><img src="img/cortos/8.png" alt=""></a>
                             <p>Jochología <br> Comercial <br>2019</p>
                         </div>
+                    </div>
+                    <button aria-label="Siguiente" class="carousel__siguiente__auvi"><i class="fa fa-fw fa-chevron-right"></i></button>
+                </div>
+                <br>
+                <div role="tablist" class="carousel__indicadores__auvi"></div>
+            </div>
+            <div class="carousel">
+                <center>
+                    <h2>VIDEOCLIPS MUSICALES</h2><br>
+                </center>
+                <div class="carousel__contenedor__music">
+                    <button aria-label="Anterior" class="carousel__anterior__music"><i class="fa fa-fw fa-chevron-left"></i></button>
+                    <div class="carousel__lista__music">
                         <div class="carousel__elemento">
-                            <a href="html/proyecto_video_10.html"><img src="img/cortos/10.png" alt=""></a>
-                            <p>La que me gusta <br> Videoclip musical <br>2019</p>
+                            <a href="html/proyecto_video_musical_jaime.html"><img src="img/cortos/2.png" alt=""></a>
+                            <p>JAIME <br> Videoclip musical <br>2019</p>
                         </div>
                         <div class="carousel__elemento">
-                            <a href="html/proyecto_video_6.html"><img src="img/cortos/6.png" alt=""></a>
+                            <a href="html/proyecto_video_musical_lqmg.html"><img src="img/cortos/10.png" alt=""></a>
+                            <p>La que me gusta <br> Videoclip musical <br>2019</p>
+                        </div>
+                    </div>
+                    <button aria-label="Siguiente" class="carousel__siguiente__music"><i class="fa fa-fw fa-chevron-right"></i></button>
+                </div>
+                <br>
+                <div role="tablist" class="carousel__indicadores__music"></div>
+            </div>
+            <div class="carousel">
+                <center>
+                    <h2>CORTOMETRAJES</h2><br>
+                </center>
+                <div class="carousel__contenedor__corto">
+                    <button aria-label="Anterior" class="carousel__anterior__corto"><i class="fa fa-fw fa-chevron-left"></i></button>
+                    <div class="carousel__lista__corto">
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_corto_intercambio.html"><img src="img/cortos/3.png" alt=""></a>
+                            <p>El intercambio <br> Serie Web <br>2021</p>
+                        </div>
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_corto_escape.html"><img src="img/cortos/4.png" alt=""></a>
+                            <p>Cineminuto <br> Cortometraje <br>2021 </p>
+                        </div>
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_corto_metflix.html"><img src="img/cortos/9.png" alt=""></a>
+                            <p>METFLIX <br> Cortometraje <br>2018</p>
+                        </div>
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_corto_trabajo.html"><img src="img/cortos/5.png" alt=""></a>
+                            <p>Trabajo en equipo <br> Cortometraje <br>2018 </p>
+                        </div>
+                        <div class="carousel__elemento">
+                            <a href="html/proyecto_video_corto_batallamagica.html"><img src="img/cortos/6.png" alt=""></a>
                             <p>Batalla Mágica <br> Cortometraje <br>2017</p>
                         </div>
                     </div>
-                    <button aria-label="Siguiente" class="carousel__siguiente"><i class="fa fa-fw fa-chevron-right"></i></button>
+                    <button aria-label="Siguiente" class="carousel__siguiente__corto"><i class="fa fa-fw fa-chevron-right"></i></button>
                 </div>
                 <br>
-                <div role="tablist" class="carousel__indicadores"></div>
+                <div role="tablist" class="carousel__indicadores__corto"></div>
             </div>
+
             <a name="Nosotros" class="ancla"></a>
             <br><br><br><br>
             <center>
@@ -246,6 +273,4 @@
     </footer>
     <script src="Glider.js-master/glider.js"></script>
     <script src="js/app.js"></script>
-</body>
-
-</html>
+</body></html>
